--- a/VelibConsoleClient/App.config
+++ b/VelibConsoleClient/App.config
@@ -5,14 +5,18 @@
     </startup>
     <system.serviceModel>
         <bindings>
-            <basicHttpBinding>
-                <binding name="BasicHttpBinding_IService1" />
-            </basicHttpBinding>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_IService1" />
+            </wsDualHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8733/Design_Time_Addresses/VelibGatewayService/Service1/"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IService1"
-                contract="VelibService.IService1" name="BasicHttpBinding_IService1" />
+                binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IService1"
+                contract="VelibService.IService1" name="WSDualHttpBinding_IService1">
+                <identity>
+                    <dns value="localhost" />
+                </identity>
+            </endpoint>
         </client>
     </system.serviceModel>
 </configuration>
