--- a/VelibConsoleClient/VelibConsoleClient.csproj
+++ b/VelibConsoleClient/VelibConsoleClient.csproj
@@ -51,6 +51,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VelibServiceCallbackSink.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
