--- a/VelibGatewayService/VelibGatewayService.csproj
+++ b/VelibGatewayService/VelibGatewayService.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Contract.cs" />
     <Compile Include="IService1.cs" />
+    <Compile Include="IService1Events.cs" />
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service1.cs" />
