--- a/VelibGatewayService/app.config
+++ b/VelibGatewayService/app.config
@@ -24,7 +24,7 @@
         </host>
         <!-- Service Endpoints -->
         <!-- Unless fully qualified, address is relative to base address supplied above -->
-        <endpoint address="" binding="basicHttpBinding" contract="VelibGatewayService.IService1"  >
+        <endpoint address="" binding="wsDualHttpBinding" contract="VelibGatewayService.IService1"  >
           <!-- 
               Upon deployment, the following identity element should be removed or replaced to reflect the 
               identity under which the deployed service runs.  If removed, WCF will infer an appropriate identity 
