--- a/VelibGatewayService/VelibGatewayService.csproj
+++ b/VelibGatewayService/VelibGatewayService.csproj
@@ -46,13 +46,14 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Contract.cs" />
+    <Compile Include="Data\Contract.cs" />
     <Compile Include="IService1.cs" />
     <Compile Include="IService1Events.cs" />
-    <Compile Include="Position.cs" />
+    <Compile Include="Data\Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service1.cs" />
-    <Compile Include="Station.cs" />
+    <Compile Include="Data\Station.cs" />
+    <Compile Include="Data\StationToUpdate.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
